Implement jwt service with generate token functionality

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: true
+
+jwt:
+  key: ${SECRET_KEY}
+  access_duration: ${ACCESS_TOKEN_DURATION}
