--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
-		<!--  Cloudinary -->
-<!--		<dependency>-->
-<!--			<groupId>com.cloudinary</groupId>-->
-<!--			<artifactId>cloudinary-http5</artifactId>-->
-<!--			<version>2.0.0</version>-->
-<!--		</dependency>-->
+		<!-- Cloudinary -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http5</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 		<!--  MySQL driver -->
 		<dependency>
