--- a/pom.xml
+++ b/pom.xml
@@ -57,17 +57,13 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- Resend -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+            <groupId>com.resend</groupId>
+            <artifactId>resend-java</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
-
-        <dependency>
-            <groupId>io.mailtrap</groupId>
-            <artifactId>mailtrap-java</artifactId>
-            <version>1.0.0</version>
-        </dependency>
 
         <!-- Cloudinary -->
         <dependency>
