--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     redis:
       url: ${REDIS_URL}
       password: ${REDIS_PASSWORD}
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
 jwt:
   key: ${SECRET_KEY}
   access_duration: ${ACCESS_TOKEN_DURATION}
@@ -25,5 +30,5 @@ cloudinary:
   cloudinary-api-key: ${CLOUDINARY_API_KEY}
   cloudinary-api-secret: ${CLOUDINARY_API_SECRET}
 resend:
-  api-key: "re_8EhrEJn4_2Liw3KDsL8bjwXbcxRJUFD7k"
-  sender: "admin@crmsoft.site"
+  api-key: ${MAIL_API_KEY}
+  sender: ${MAIL_SENDER}
