--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,19 @@
             <version>3.1.0</version>
         </dependency>
 
-
+        <!-- API docs -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.6.0</version> <!-- Dành cho Spring Boot 3.x -->
+            <version>2.6.0</version>
         </dependency>
 
+        <!-- PDF -->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.32</version>
+        </dependency>
 
         <!-- Cloudinary -->
         <dependency>
@@ -113,19 +119,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.10.0</version>
-        </dependency>
-
-        <!--  EXCEL -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>5.3.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>5.3.0</version>
         </dependency>
 
 
